fix scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,9 +85,20 @@ main {
   padding: 50px 0 400px;
 }
 
+/* Stilizza la scrollbar */
+body::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
 /* Stilizza il track della scrollbar */
-main::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   background-color: transparent;
+}
+
+body::-webkit-scrollbar-corner {
+  background-color: #f2f2f2;
+  border: none; /* Rimuove il bordo dell'angolo */
 }
 
 /* Stilizza il thumb della scrollbar */
